# Towards-Efficient-Scalable-Training-DP-DL

./: README.MD  pyproject.toml  requirements.txt
examples/: bert_example.py  example.ipynb  example_distributed.ipynb
jax_exp/: GenericBatchManager.py  MyOwnBatchManager.py  data.py  jax_from_0.py  jax_mask_dp.py  jax_mask_efficient.py  jax_poisson.ipynb  models.py  models_flax.py  naive_jax_pipeline.py  pipeline_jax.py  pipeline_jax_new.py  private_resnet.py  private_vit.py  thr_record.py  thr_record_for_mask.py  thr_record_new.py  transform_functions.py
jaxdpopt/: data.py  jax_mask_efficient.py
research/torch_exp/: model_functions.py  pipeline_torch_nlp.py
src/: data.py  dp_accounting_utils.py  example.ipynb  example.py  example_distributed.ipynb  jax_mask_efficient.py  models.py
src/testing/: test_data.py  test_dp_accounting.py  test_jax_mask_efficient.py
tests/: test_data.py  test_dp_accounting.py  test_end_to_end_simple.py  test_jax_mask_efficient.py  test_models.py
torch_exp/: MyOwnBatchManager.py  data.py  model_functions.py  models.py  pipeline_torch.py  thr_record.py
